--- a/lib/StaticAnalyzer/Core/CMakeLists.txt
+++ b/lib/StaticAnalyzer/Core/CMakeLists.txt
@@ -47,6 +47,7 @@ add_clang_library(clangStaticAnalyzerCore
   clangAST
   clangAnalysis
   clangBasic
+  clangFrontend
   clangLex
   clangRewrite
   )
